[gd_scene load_steps=5 format=3 uid="uid://d4abqo26pge4q"]

[ext_resource type="PackedScene" path="res://Map.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/Main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dap1evdowwmjm" path="res://Res/MapMarker.png" id="4"]

[sub_resource type="CompressedTexture2D" id="1"]

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 600.0
script = ExtResource("2")

[node name="MapContainer" type="HBoxContainer" parent="."]
clip_contents = true
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.8
offset_right = 204.8
offset_bottom = 300.0
theme_override_constants/separation = 0

[node name="MapBorder" type="NinePatchRect" parent="MapContainer"]
custom_minimum_size = Vector2(327.68, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
region_rect = Rect2(64, 64, 64, 64)

[node name="ViewContainer" type="SubViewportContainer" parent="MapContainer/MapBorder"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 322.68
offset_bottom = 295.0
mouse_filter = 2
stretch = true

[node name="MapView" type="SubViewport" parent="MapContainer/MapBorder/ViewContainer"]
handle_input_locally = false
size = Vector2i(317, 290)
render_target_update_mode = 4

[node name="Map" parent="MapContainer/MapBorder/ViewContainer/MapView" instance=ExtResource("1")]

[node name="MapControls" type="Control" parent="MapContainer"]
custom_minimum_size = Vector2(81.92, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MapOptions" type="ItemList" parent="MapContainer/MapControls"]
layout_mode = 0
anchor_bottom = 1.0
offset_right = 81.92
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_text_lines = 2
item_count = 3
item_0/text = "Pan"
item_0/icon = SubResource("1")
item_1/text = "Set Target Area3D"
item_1/icon = ExtResource("4")
item_2/text = "Scale Target Area3D"

[node name="Log" type="Control" parent="."]
anchors_preset = 0
offset_right = 307.2
offset_bottom = 540.0

[node name="LogText" type="TextEdit" parent="Log"]
layout_mode = 0
offset_right = 307.2
offset_bottom = 540.0

[node name="ActionView" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.8
offset_top = -300.0
offset_right = 204.8

[node name="TextureRect" type="TextureRect" parent="ActionView"]
layout_mode = 0
offset_right = 409.6
offset_bottom = 300.0

[node name="Inventory" type="Control" parent="."]
anchors_preset = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.2
offset_top = -400.0

[node name="Items" type="ItemList" parent="Inventory"]
layout_mode = 0
offset_right = 307.2
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
item_count = 3
item_0/text = "Sword"
item_1/text = "Healing Potion"
item_2/text = "Other Random Items..."

[node name="Account" type="Control" parent="."]
anchors_preset = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 307.2

[node name="Profile" type="Button" parent="Account"]
layout_mode = 0
offset_right = 102.4
offset_bottom = 60.0
text = "Profile"

[node name="Friends" type="Button" parent="Account"]
layout_mode = 0
offset_left = 102.4
offset_right = 204.8
offset_bottom = 60.0
text = "Friends"

[node name="Settings" type="Button" parent="Account"]
layout_mode = 0
offset_left = 204.8
offset_right = 307.2
offset_bottom = 60.0
text = "Settings"

[node name="PartyInfo" type="Control" parent="."]
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -307.2
offset_bottom = 200.0

[node name="PhoneControls" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 300.0
offset_bottom = 50.0

[node name="ToggleMap" type="Button" parent="PhoneControls"]
layout_mode = 0
offset_right = 75.0
offset_bottom = 50.0
text = "Map"

[node name="ToggleLog" type="Button" parent="PhoneControls"]
layout_mode = 0
offset_left = 75.0
offset_right = 150.0
offset_bottom = 50.0
text = "Log"

[node name="ToggleInventory" type="Button" parent="PhoneControls"]
layout_mode = 0
offset_left = 150.0
offset_right = 225.0
offset_bottom = 50.0
text = "Inventory"

[node name="TogglePartyInfo" type="Button" parent="PhoneControls"]
layout_mode = 0
offset_left = 225.0
offset_right = 300.0
offset_bottom = 50.0
text = "Party"

[connection signal="item_selected" from="MapContainer/MapControls/MapOptions" to="MapContainer/MapBorder/ViewContainer/MapView/Map" method="_on_MapOptions_item_selected"]
[connection signal="pressed" from="PhoneControls/ToggleMap" to="." method="_on_ToggleMap_pressed"]
[connection signal="pressed" from="PhoneControls/ToggleLog" to="." method="_on_ToggleLog_pressed"]
[connection signal="pressed" from="PhoneControls/ToggleInventory" to="." method="_on_ToggleInventory_pressed"]
[connection signal="pressed" from="PhoneControls/TogglePartyInfo" to="." method="_on_TogglePartyInfo_pressed"]
